--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,10 +23,10 @@ build:
 
 requirements:
   host:
-    - python
+    - python >=3.6
     - pip
   run:
-    - python
+    - python >=3.6
     - click
     - setuptools
     - dtoolcore
